--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,31 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.lint.dependencies]
+flake8 = "^7.2.0"
+black = "^25.1.0"
+isort = "^6.0.1"
+mypy = "^1.15.0"
+
+[tool.black]
+line-length = 119
+exclude = '''
+(
+  /(
+      \.git
+    | \.mypy_cache
+    | \.venv
+  )/
+)
+'''
+
+[tool.isort]
+line_length = 119
+
+[tool.mypy]
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = false
+exclude = "venv"
+disable_error_code = ["arg-type"]
